--- a/Big-Event/pom.xml
+++ b/Big-Event/pom.xml
@@ -68,5 +68,11 @@
       <artifactId>spring-boot-starter-test</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>com.github.pagehelper</groupId>
+      <artifactId>pagehelper-spring-boot-starter</artifactId>
+      <version>1.4.6</version>
+    </dependency>
+
   </dependencies>
 </project>
